python/test-data/testCheck2.py
from wypp import *

check(1, 2, 3)
